# Magic-shop

./: .gitignore  README.md  db.sqlite3  pyproject.toml  pytest.ini
ads/: admin.py  csv2json.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
ads/fixtures/: ad.csv.json  ads.csv.json
ads/migrations/: 0001_initial.py  0002_alter_ad_price.py  0002_category_slug.py  0002_remove_ad_address.py  0002_selection.py  0003_alter_ad_description_alter_ad_is_published_and_more.py  0003_alter_category_slug.py  0003_alter_user_age_alter_user_locations.py  0003_remove_user_location_user_location.py  0004_alter_ad_image.py  0004_alter_user_first_name_alter_user_last_name.py  0005_rename_location_user_locations.py  0006_alter_user_role.py  0007_alter_ad_options_alter_category_options_and_more.py  0008_alter_user_role.py
magic_shop/: asgi.py  settings.py  urls.py  wsgi.py
postgres/: docker-compose.yaml
tests/: factories.py  fixtures.py  test_root.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/selections/: selection_create_test.py
